fix typo in proto file
